<resources>
    <string name="app_name">Calculator</string>
    <string name="equalSign">=</string>
    <string name="del">DEL</string>
    <string name="_0">0</string>
    <string name="clear">CLEAR</string>
    <string name="decimalSign">.</string>
    <string name="_9">9</string>
    <string name="multiplySign">*</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="DivisionSign">/</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="MinusSign">-</string>
    <string name="EqualSign">=</string>
    <string name="PlusSign">+</string>
    <string name="ModSign">%</string>
</resources>