<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvExpression"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="end"
        android:ellipsize="end"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:paddingLeft="10dp"/>


    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="end"
        android:ellipsize="end"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textSize="30sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvClear"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:background="#D32F2F"
                android:gravity="center"
                android:text="@string/clear"
                android:textColor="@color/white"
                android:textSize="21sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:background="#D32F2F"
                android:gravity="center"
                android:text="@string/del"
                android:textColor="@color/white"
                android:textSize="21sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvEqual"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:background="#D32F2F"
                android:gravity="center"
                android:text="@string/EqualSign"
                android:textColor="@color/white"
                android:textSize="45sp"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvSeven"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_7"
                android:textColor="@color/white"
                android:textSize="45sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvEight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_8"
                android:textColor="@color/white"
                android:textSize="45sp" />

            <TextView
                android:id="@+id/tvNine"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_9"
                android:textColor="@color/white"
                android:textSize="45sp" />

            <TextView
                android:id="@+id/tvDiv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/DivisionSign"
                android:textColor="@color/white"
                android:textSize="45sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvFour"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_4"
                android:textColor="@color/white"
                android:textSize="45sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvFive"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_5"
                android:textColor="@color/white"
                android:textSize="45sp" />

            <TextView
                android:id="@+id/tvSix"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_6"
                android:textColor="@color/white"
                android:textSize="45sp" />

            <TextView
                android:id="@+id/tvMul"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/multiplySign"
                android:textColor="@color/white"
                android:textSize="45sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvOne"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_1"
                android:textColor="@color/white"
                android:textSize="45sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvTwo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_2"
                android:textColor="@color/white"
                android:textSize="45sp" />

            <TextView
                android:id="@+id/tvThree"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_3"
                android:textColor="@color/white"
                android:textSize="45sp" />

            <TextView
                android:id="@+id/tvMinus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/MinusSign"
                android:textColor="@color/white"
                android:textSize="45sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tvDot"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/decimalSign"
                android:textColor="@color/white"
                android:textSize="45sp" />
            <TextView
                android:id="@+id/tvZero"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_0"
                android:textColor="@color/white"
                android:textSize="45sp" />

            <TextView
                android:id="@+id/tvMod"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/ModSign"
                android:textColor="@color/white"
                android:textSize="45sp" />

            <TextView
                android:id="@+id/tvPlus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/PlusSign"
                android:textColor="@color/white"
                android:textSize="45sp" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>